Fixes z-indexes of dropdown menus

--- a/src/onegov.gazette/onegov/gazette/theme/styles/gazette.scss
+++ b/src/onegov.gazette/onegov/gazette/theme/styles/gazette.scss
@@ -483,6 +483,10 @@ footer {
                         border-left: 0;
                         top: 1px;
                         z-index: 20;
+
+                        &.has-dropdown {
+                            z-index: 505;
+                        }
                     }
                 }
             }
